# PG2

./: .gitignore  CMakeLists.txt  Final project + eval.md  Mesh.hpp  Model.hpp  OBJloader.cpp  OBJloader.hpp  PROJECT_PRESENTATION.md  README.md  ShaderProgram.cpp  ShaderProgram.hpp  TASK3_IMPLEMENTATION.md  Texture.cpp  app.cpp  app.hpp  assets.hpp  basic.frag  basic.vert  basic_core.vert  bulb.frag  callbacks.cpp  camera.hpp  directional.vert  fps_meter.hpp  getinfo.cpp  gl_err_callback.cpp  gl_err_callback.h  glerror.cpp  glerror.h  helloworld.cpp  lighting.frag  main.cpp  mesh.hpp  meshgen.cpp  model.hpp  point.vert  shader_program.cpp  shader_program.hpp  tex.frag
01 transform/: transform00-basic explanation.cpp
02 transform - callbacks/: Model-extended.hpp  transform01-callbacks.cpp
03 transform - callbacks, camera/: basic_core.frag  camera.hpp  transform.cpp
04lab - shaders, models/: README.md  usecase_example.cpp
04lab - shaders, models/00 resource management/: usage_example.hpp
04lab - shaders, models/01 shader class/: Mesh.hpp  ShaderProgram.cpp  ShaderProgram.hpp  uniform_location_caching.cpp_snippet  usage_example.hpp
04lab - shaders, models/02 shader examples/: GL_rainbow.frag  shadertoy.com_rainbow.frag
04lab - shaders, models/03 vertex-mesh-model class/: Mesh.hpp  Model.hpp  assets.hpp  meshgen.cpp
04lab - shaders, models/04 loading assets/: OBJloader.cpp  OBJloader.hpp
04lab - shaders, models/04 loading assets/raw_cpp_data_sample/: teapot_vec.hpp
resources/: config.json  level.json
shaders/: GL_rainbow.frag  basic.frag  basic.vert  bunny_transparent.frag  fx_shared.vert  light.frag  lighting.frag  lighting.vert  particle.frag  particle.vert  tex.frag  tex.vert  wave_distortion.frag
src/: Camera.hpp  Level.hpp  Lights.hpp  Mesh.hpp  Model.hpp  OBJloader.hpp  Particle.hpp  Player.hpp  SceneObject.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  app.cpp  app.hpp  assets.hpp  callbacks.cpp  fps_meter.hpp  getinfo.hpp  glInfo.cpp  gl_err_callback.cpp  gl_err_callback.h  gl_err_callback.hpp  glerror.cpp  glerror.hpp  helloworld.cpp  imgui.ini  level.hpp  lights.hpp  main.cpp  meshgen.cpp  meshgen.hpp  non_copyable.hpp  particle.hpp  player.hpp  shader_program.hpp  texture.cpp  texture.hpp
